CHANGES: UPDATED CSS for better adaptability

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -441,6 +441,7 @@ article.entry-card.type-wall .plg-wrapper {
     justify-content: right;
     margin-top: 30px;
     margin-bottom: 45px;
+    position: absolute;
 }
 
 .toolbar-content .rpi-wall-buttons {
