--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -264,7 +264,7 @@ article.founded label[for="tab-group"]{
 .message-entry {
     border-radius: 3px;
     margin: 5px;
-    padding: 5px;
+    padding: 10px;
     background-color: lightgrey;
 }
 .message-entry:hover {
@@ -369,6 +369,13 @@ article.founded label[for="tab-group"]{
 .gruppe .wp_ulike_likers_wrapper {
     flex: auto;
     margin: -7px 5px;
+}
+
+.gruppe-liker {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px 20px;
+    background: var(--ci-tutorial-notification);
 }
 
 .gruppe-footer {
@@ -632,9 +639,12 @@ article.entry-card.type-wall .plg-wrapper {
 
 .like-btn-wrapper {
     border: 1px solid orangered;
+    background-color: white;
     border-radius: 50%;
-    max-height: 90px;
     box-shadow: 1px 2px 9px 1px #aaaaaa;
+    margin: auto;
+    height: 90px;
+    width: 90px;
 }
 
 
